--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Testing React</title>
-  <link href="main.css" rel="stylesheet"></head>
+  <link href="main.5e77a3f9b75dbe09e3f2.css" rel="stylesheet"></head>
   <body>
     <div id="app"></div>
-  <script type="text/javascript" src="main.js"></script></body>
+  <script type="text/javascript" src="main.5e77a3f9b75dbe09e3f2.js"></script></body>
 </html>
