--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Testing React</title>
-  <link href="main.5e77a3f9b75dbe09e3f2.css" rel="stylesheet"></head>
+  <link href="main.7f47c7f4dfe451e18e1c.css" rel="stylesheet"></head>
   <body>
     <div id="app"></div>
-  <script type="text/javascript" src="main.5e77a3f9b75dbe09e3f2.js"></script></body>
+  <script type="text/javascript" src="main.7f47c7f4dfe451e18e1c.js"></script></body>
 </html>
